# discern

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: model-check.yml
docs/: GUIDANCE.md
examples/: config.placebo.json  config.real.json  demo.csv  make_demo_data.py
examples/sample-output/: orgsci-vs-smj.md  qje-vs-jpe.md
scripts/: check_model_ids.py
src/discern/: __init__.py  audit.py  classifier_check.py  cli.py  config.py  consolidate.py  core.py  data.py  discovery.py  keys.py  measure.py  pipeline.py  prompts.py  select.py  themes.py
tests/: null_fdr_results.json  test_core.py  test_model_check.py  test_null_fdr.py  test_pipeline.py  test_robustness.py
